# pypi_python_packages

./: README.md  test.py
oop/src/: employee.py  main.py  reporting.py  shift.py
oop/test/src/: test_employee.py
s3_last_modified_objects/: README.md  setup.cfg
s3_last_modified_objects/s3_last_modified_objects.egg-info/: PKG-INFO  SOURCES.txt
s3_object_list/: README.md  setup.cfg
s3_object_list/s3_object_list/: s3_last_modified_objects.py
s3_upload_download/: License.txt  README.md  setup.cfg
s3_upload_download/s3_upload_download.egg-info/: PKG-INFO  SOURCES.txt
