[metadata]
name = s3_upload_download
version = 0.0.3
author = Momataj Begum
author_email = momataj.momo@gmail.com
description = Utility modules for the s3 upload and download tasks.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.6
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
python_requires = >=3.6
install_requires =
    boto3